# uburu

./: .clang-format  .clang-tidy  .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.pt-BR.md  SECURITY.md  TODO.md  vcpkg.json
apps/cli/: CMakeLists.txt
apps/cli/src/: cli-application.cpp  cli-application.hpp  cli-file-helper.cpp  cli-file-helper.hpp  cli-options.cpp  cli-options.hpp  cli-output.cpp  cli-output.hpp  cli-runtime.cpp  cli-runtime.hpp  main.cpp
apps/desktop/: CMakeLists.txt
apps/desktop/i18n/: uburu-en-us.ts  uburu-pt-br.ts
apps/desktop/qml/: main.qml
apps/desktop/qml/components/: action-menu-item.qml  action-menu-separator.qml  action-menu.qml  command-palette.qml  eyebrow-label.qml  filter-chip.qml  info-icon.qml  metric-card.qml  muted-label.qml  panel.qml  preview-pane.qml  primary-button.qml  qmldir  results-pane.qml  scope-bar.qml  search-header.qml  secondary-button.qml  (+3 more)
apps/desktop/src/: main.cpp  search-controller.cpp  search-controller.hpp
apps/desktop/windows/: uburu.rc
benchmarks/: CMakeLists.txt  README.md  content-hash-benchmark.cpp  search-service-benchmark.cpp  storage-fts5-benchmark.cpp
benchmarks/baselines/: README.md  reference-developer.json
benchmarks/support/: benchmark-dataset.cpp  benchmark-dataset.hpp  benchmark-output.cpp  benchmark-output.hpp  index-benchmark-runner.cpp  index-benchmark-runner.hpp  search-benchmark-runner.cpp  search-benchmark-runner.hpp
docs/: cli.md  (+18 more)
src/app/: CMakeLists.txt
src/app/dto/: search-dto.cpp  search-dto.hpp
src/app/services/: adaptive-result-batcher.cpp  adaptive-result-batcher.hpp  indexing-service.cpp  indexing-service.hpp  search-service.cpp  search-service.hpp  settings-service.cpp  settings-service.hpp
src/core/: CMakeLists.txt
src/core/archive/: zip-archive-reader.cpp  zip-archive-reader.hpp
src/core/concurrency/: bounded-queue.hpp  worker-pool.hpp
src/core/contracts/: contract-version.hpp
src/core/diagnostics/: diagnostic-report.cpp  diagnostic-report.hpp  file-structured-logger.cpp  file-structured-logger.hpp  metrics.hpp  search-tracing.cpp  search-tracing.hpp  structured-logger.cpp  structured-logger.hpp  structured-metrics-sink.cpp  structured-metrics-sink.hpp
src/core/document/: document-extractor.cpp  document-extractor.hpp  docx-document-extractor.cpp  docx-document-extractor.hpp  html-document-extractor.cpp  html-document-extractor.hpp  open-document-extractor.cpp  open-document-extractor.hpp  pdf-document-extractor.cpp  pdf-document-extractor.hpp  plain-text-extractor.cpp  plain-text-extractor.hpp  pptx-document-extractor.cpp  pptx-document-extractor.hpp  rtf-document-extractor.cpp  rtf-document-extractor.hpp  subtitle-document-extractor.cpp  subtitle-document-extractor.hpp  xlsx-document-extractor.cpp  xlsx-document-extractor.hpp  xml-document-utils.cpp  xml-document-utils.hpp
src/core/filesystem/: file-scanner.hpp  file-watcher-backend.hpp  file-watcher.hpp  git-ignore-rules.cpp  git-ignore-rules.hpp  linux-file-watcher.cpp  linux-file-watcher.hpp  macos-file-watcher.cpp  macos-file-watcher.hpp  path-normalization.cpp  path-normalization.hpp  polling-file-watcher.cpp  polling-file-watcher.hpp  recursive-file-scanner.cpp  recursive-file-scanner.hpp  windows-file-watcher.cpp  windows-file-watcher.hpp
src/core/git/: git-cli-git-service.cpp  git-cli-git-service.hpp  git-reconciliation.cpp  git-reconciliation.hpp  git-service.hpp  libgit2-git-service.cpp  libgit2-git-service.hpp
src/core/index/: content-hash.cpp  content-hash.hpp  index-backend.hpp  index-document-format.cpp  index-document-format.hpp  index-overlay.cpp  index-overlay.hpp  index-service.hpp  persistent-index-service.cpp  persistent-index-service.hpp
src/core/search/: direct-search-engine.cpp  direct-search-engine.hpp  search-engine.hpp  search-errors.cpp  search-errors.hpp  search-query-validation.cpp  search-query-validation.hpp  search-result-merge.cpp  search-result-merge.hpp  search-scope.cpp  search-scope.hpp
src/core/storage/: sqlite-storage-service.cpp  sqlite-storage-service.hpp  storage-paths.cpp  storage-paths.hpp  storage-service.hpp
src/core/symbols/: extension-language-parser.cpp  extension-language-parser.hpp  symbol-parser-registry.cpp  symbol-parser-registry.hpp  symbol-parser.hpp  symbol-types.hpp
src/core/text/: regex-matcher.cpp  regex-matcher.hpp  rich-format-safety.cpp  rich-format-safety.hpp  text-file-reader.cpp  text-file-reader.hpp  text-matcher.cpp  text-matcher.hpp
tests/: CMakeLists.txt
tests/desktop/: search-controller-tests.cpp
tests/fixtures/: README.md  test-fixtures.hpp
tests/fuzzers/: CMakeLists.txt  git-ignore-fuzzer.cpp  path-normalization-fuzzer.cpp  pdf-document-extractor-fuzzer.cpp  rtf-document-extractor-fuzzer.cpp  text-file-reader-fuzzer.cpp  text-matcher-fuzzer.cpp  zip-archive-reader-fuzzer.cpp
tests/helpers/: libgit2-repository-fixture.hpp  temporary-paths.hpp
tests/integration/: README.md  libgit2-git-service-integration-tests.cpp
tests/regression/: search-regression-tests.cpp
tests/unit/: adaptive-result-batcher-tests.cpp  backend-contract-tests.cpp  bounded-queue-tests.cpp  cli-options-tests.cpp  content-hash-tests.cpp  contract-version-tests.cpp  diagnostics-tests.cpp  direct-search-engine-tests.cpp  document-extractor-tests.cpp  git-ignore-rules-tests.cpp  git-reconciliation-tests.cpp  index-document-format-tests.cpp  index-overlay-tests.cpp  indexing-service-tests.cpp  libgit2-git-service-tests.cpp  path-normalization-tests.cpp  persistent-index-service-tests.cpp  polling-file-watcher-tests.cpp  recursive-file-scanner-tests.cpp  regex-matcher-tests.cpp  rich-format-safety-tests.cpp  search-dto-tests.cpp  search-query-validation-tests.cpp  search-result-merge-tests.cpp  search-scope-tests.cpp  search-service-tests.cpp  settings-service-tests.cpp  sqlite-storage-service-tests.cpp  symbol-parser-tests.cpp  text-file-reader-tests.cpp  text-matcher-tests.cpp  worker-pool-tests.cpp  zip-archive-reader-tests.cpp
(+27 files in other folders)
